--- a/templates/usuarios/crear-usuario.html
+++ b/templates/usuarios/crear-usuario.html
@@ -5,6 +5,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="{{url_for('static', filename='plugins/fontawesome-free/css/all.min.css')}}">
+  <!-- SweetAlert2 -->
+  <link rel="stylesheet" href="{{url_for('static', filename='plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css')}}">
+  <!-- Toastr -->
+  <link rel="stylesheet" href="{{url_for('static', filename='plugins/toastr/toastr.min.css')}}">
   <!-- Theme style -->
   <link rel="stylesheet" href="{{url_for('static', filename='dist/css/adminlte.min.css')}}">
 {% endblock %}
@@ -161,8 +165,56 @@
   <script src="{{url_for('static', filename='plugins/jquery/jquery.min.js')}}"></script>
   <!-- Bootstrap 4 -->
   <script src="{{url_for('static', filename='plugins/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+  <!-- SweetAlert2 -->
+  <script src="{{url_for('static', filename='plugins/sweetalert2/sweetalert2.min.js')}}"></script>
+  <!-- Toastr -->
+  <script src="{{url_for('static', filename='plugins/toastr/toastr.min.js')}}"></script>
   <!-- AdminLTE App -->
   <script src="{{url_for('static', filename='dist/js/adminlte.min.js')}}"></script>
   <!-- AdminLTE for demo purposes -->
   <script src="{{url_for('static', filename='dist/js/demo.js')}}"></script>
+
+  <script>
+    document.querySelector('#salario').addEventListener('keypress', function (e) {
+      const allowedChars = '0123456789';
+      function contains(stringValue, charValue) {
+        return stringValue.indexOf(charValue) > -1;
+      }
+      var invalidKey = e.key.length === 1 && !contains(allowedChars, e.key) || e.key === '.' && contains(e.target.value, '.');
+      invalidKey && e.preventDefault();
+    });
+    document.querySelector('#edad').addEventListener('keypress', function (e) {
+      const allowedChars = '0123456789';
+      function contains(stringValue, charValue) {
+        return stringValue.indexOf(charValue) > -1;
+      }
+      var invalidKey = e.key.length === 1 && !contains(allowedChars, e.key) || e.key === '.' && contains(e.target.value, '.');
+      invalidKey && e.preventDefault();
+    });
+  </script>
+
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for message in messages %}
+        <script type="text/javascript">
+          const Toast = Swal.mixin({
+            toast: true,
+            position: 'center',
+            showConfirmButton: false,
+            timer: 3000
+          });
+
+          let mensajeMostrar = '';
+          mensajeMostrar = '{{ message | safe }}'
+          if (mensajeMostrar) {
+            Toast.fire({
+              icon: 'error',
+              title: mensajeMostrar
+            })
+          }
+        </script>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
+
 {% endblock %}
